--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -11,7 +11,7 @@
         state: latest
 
 - name: update LB server
-  hosts: lb,dbgit 
+  hosts: lb,db 
   remote_user: ubuntu
   become: yes
   become_user: root
