--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -17,11 +17,10 @@
   become_user: root
   gather_facts: False
   tasks:
-    # - name: Update apt repo
-    #   apt: 
+    - name: Update apt repo
+      apt: 
         
-    #     update_cache: yes
-    #     cache_valid_time: 3600
+        update_cache: no     
 
     - name: ensure wireshark is at the latest version
       apt:
