--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -26,3 +26,23 @@
       apt:
         name: wireshark
         state: latest
+
+- name: Create directory, file  and add a line to it on all servers
+  hosts: nfs,webservers,db,lb
+  become: yes
+  tasks: 
+     - name: Create a directory
+       file: 
+         path: /home/sample
+         state: directory
+
+     - name: Create a file
+       file: 
+         path: /home/sample/ansible.txt
+         state: touch
+
+     - name: Add a line to the file
+       lineinfile:
+          path: /home/sample/ansible.txt
+          line: Ansible is awesome! 
+        
