--- a/playbooks/site.yaml
+++ b/playbooks/site.yaml
@@ -1,5 +1,12 @@
+---
 - hosts: all
-- import_playbook: ../static-assignments/common.yaml
+- name: Include dynamic variables 
+  tasks:
+    import_playbook: ../static-assignments/common.yaml 
+    include: ../dynamic-assignments/env-vars.yaml
+    tags:
+       - always
 
-- hosts: uat-webservers
+- hosts: webservers
+- name: Webserver assignment
 - import_playbook: ../static-assignments/uat-webservers.yaml
