Added new roles

--- a/playbooks/site.yaml
+++ b/playbooks/site.yaml
@@ -2,11 +2,10 @@
 - hosts: all
 - name: Include dynamic variables 
   tasks:
-    import_playbook: ../static-assignments/common.yaml 
-    include: ../dynamic-assignments/env-vars.yaml
+  import_playbook: ../static-assignments/common.yaml 
+  include: ../dynamic-assignments/env-vars.yaml
     tags:
-       - always
+      - always
 
-- hosts: webservers
-- name: Webserver assignment
+- hosts: uat-webservers
 - import_playbook: ../static-assignments/uat-webservers.yaml
