updated uat yaml files

--- a/playbooks/site.yaml
+++ b/playbooks/site.yaml
@@ -7,5 +7,7 @@
     tags:
       - always
 
-- hosts: uat-webservers
-- import_playbook: ../static-assignments/uat-webservers.yaml
+- hosts: lb
+- name: Loadbalancers assignment
+    import_playbook: ../static-assignments/loadbalancers.yaml
+    when: load_balancer_is_required
