--- a/playbooks/site.yaml
+++ b/playbooks/site.yaml
@@ -7,6 +7,10 @@
     tags:
       - always
 
+- name: import database file
+  import_playbook: ../static-assignments/db.yaml
+
+
 - hosts: lb
 - name: Loadbalancers assignment
     import_playbook: ../static-assignments/loadbalancers.yaml
