--- a/playbooks/site.yaml
+++ b/playbooks/site.yaml
@@ -1,11 +1,16 @@
 ---
 - hosts: all
 - name: Include dynamic variables 
-  tasks:
+  # tasks:
   import_playbook: ../static-assignments/common.yaml 
-  include: ../dynamic-assignments/env-vars.yaml
-    tags:
+  import_playbook: ../dynamic-assignments/env-vars.yaml
+  tags:
       - always
 
-- hosts: uat-webservers
-- import_playbook: ../static-assignments/uat-webservers.yaml
+- name: import database file
+  import_playbook: ../static-assignments/db.yaml
+
+- hosts: lb
+- name: Loadbalancers assignment
+  import_playbook: ../static-assignments/loadbalancers.yaml
+  when: load_balancer_is_required
