--- a/roles/apache/defaults/main.yml
+++ b/roles/apache/defaults/main.yml
@@ -59,3 +59,11 @@ apache_restart_state: restarted
 # Apache package state; use `present` to make sure it's installed, or `latest`
 # if you want to upgrade or switch versions using a new repo.
 apache_packages_state: present
+
+#*****************vars for loadbalancing status***************
+enable_apache_lb: false
+load_balancer_is_required: false
+
+loadbalancer_name: "myapp1"
+web1: "172.31.30.24 weight=3"
+web2: "172.31.22.37 weight=3"
