--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -10,7 +10,7 @@
 
 # Setup/install tasks.
 - include_tasks: setup-RedHat.yml
-  when: ansible_os_family == 'RedHat' or ansible_os_family == 'Rocky'
+  when: ansible_os_family == 'RedHat' 
 
 - include_tasks: setup-Ubuntu.yml
   when: ansible_distribution == 'Ubuntu'
@@ -30,8 +30,20 @@
 # Vhost configuration.
 - import_tasks: vhosts.yml
 
+- name: set webservers host name in /etc/hosts
+  become: yes
+  blockinfile: 
+    path: /etc/hosts
+    block: |
+      {{ item.ip }} {{ item.name }}
+  loop:
+    - { name: web1, ip: 172.31.30.24 }
+    - { name: web2, ip: 172.31.22.37 }
+
+
 # Nginx setup.
 - name: Copy nginx configuration in place.
+  become: true
   template:
     src: "{{ nginx_conf_template }}"
     dest: "{{ nginx_conf_file_path }}"
@@ -42,6 +54,7 @@
     - reload nginx
 
 - name: Ensure nginx service is running as configured.
+  become: true
   service:
     name: nginx
     state: "{{ nginx_service_state }}"
