--- a/roles/nginx/handlers/main.yml
+++ b/roles/nginx/handlers/main.yml
@@ -1,4 +1,11 @@
 ---
+- name: start nginx
+  become: yes
+  service:
+    name: nginx
+    state: started
+
+
 - name: restart nginx
   service: name=nginx state=restarted
 
