--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -11,12 +11,36 @@ pipeline {
     }
     
 
-     stage('Test') {
+    stage('Test') {
       steps {
         script {
           sh 'echo "Testing Stage"'
         }
       }
     }
+
+    stage('Package') {
+      steps {
+        script {
+          sh 'echo "Package Stage"'
+        }
+      }
+    }
+    stage('Deploy') {
+      steps {
+        script {
+          sh 'echo "Deploy Stage"'
+        }
+      }
+    }
+
+    stage('Clean Up') {
+      steps {
+        script {
+          sh 'echo "Clean Up Stage"'
+        }
+      }
+    }
+    
     }
 }
