--- a/inventory/dev.yaml
+++ b/inventory/dev.yaml
@@ -1,23 +1,7 @@
-[nfs]
-172.31.31.241  ansible_ssh_user='ec2-user'
 
-[webservers]
-172.31.18.161  ansible_ssh_user='ec2-user'
-
-#172.31.22.137  ansible_ssh_user='ec2-user'
-
-
-[todo]
-<Todo-Web-Server-Private-IP-Address>
+[nginx]
+172.31.18.91  ansible_ssh_user='ec2-user'
 
 [db]
-172.31.3.124   ansible_ssh_user='ubuntu' 
-
-[lb]
-172.31.29.150  ansible_ssh_user='ubuntu'
-
-
-
-
-
+172.31.20.50  ansible_ssh_user='ubuntu'
 
