--- a/playbooks/site.yaml
+++ b/playbooks/site.yaml
@@ -1,18 +1,27 @@
----
-- hosts: all
-- name: Include dynamic variables 
-  # tasks:
-  import_playbook: ../static-assignments/common.yaml 
-  import_playbook: ../dynamic-assignments/env-vars.yaml
-  tags:
-      - always
+---# 
+- hosts: db
+- name: database assignment
+  ansible.builtin.import_playbook: ../static-assignments/db.yaml
 
-# - name: import database file
-#   import_playbook: ../static-assignments/db.yaml
 
-- hosts: lb
-- name: Loadbalancers assignment
+- hosts: nginx
+- name: nginx assignment
+  ansible.builtin.import_playbook: ../static-assignments/nginx.yaml
 
-  import_playbook: ../static-assignments/loadbalancers.yaml
-  when: load_balancer_is_required
+# - hosts: all
+# - name: Include dynamic variables 
+#   # tasks:
+#   import_playbook: ../static-assignments/common.yaml 
+#   import_playbook: ../dynamic-assignments/env-vars.yaml
+#   tags:
+#       - always
+
+# # - name: import database file
+# #   import_playbook: ../static-assignments/db.yaml
+
+# - hosts: lb
+# - name: Loadbalancers assignment
+
+#   import_playbook: ../static-assignments/loadbalancers.yaml
+#   when: load_balancer_is_required
 
