--- a/playbooks/site.yaml
+++ b/playbooks/site.yaml
@@ -1,12 +1,12 @@
 --- 
 - hosts: db
 - name: database assignment
-  ansible.builtin.import_playbook: ../static-assignments/db.yaml
+  import_playbook: ../static-assignments/db.yaml
 
 
 - hosts: nginx
 - name: nginx assignment
-  ansible.builtin.import_playbook: ../static-assignments/nginx.yaml
+  import_playbook: ../static-assignments/nginx.yaml
 
 # - hosts: all
 # - name: Include dynamic variables 
