--- a/deploy/ansible.cfg
+++ b/deploy/ansible.cfg
@@ -6,6 +6,8 @@ host_key_checking = False
 gathering = smart
 ansible_python_interpreter=/usr/bin/python3
 allow_world_readable_tmpfiles=true
+inventory = /home/ubuntu/ansible-config-mgt/inventory
+
 
 
 [ssh_connection]
