--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -33,7 +33,7 @@ pipeline {
 
       stage('Run Ansible playbook') {
         steps {
-   ansiblePlaybook become: true, colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'Ansible2', inventory: 'inventory/dev.yaml', playbook: 'playbooks/site.yaml'
+   ansiblePlaybook become: true, colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'Ansible2', inventory: 'inventory/${inventory}', playbook: 'playbooks/site.yaml'
          }
       }
 
