--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
     }
 
   parameters {
-      choice(choices: ['dev', 'sit'], name: 'inventory',  description: 'This is the inventory file for the environment to deploy configuration')
+      choice( name: 'inventory',choices: ['sit', 'dev'],  description: 'This is the inventory file for the environment to deploy configuration')
     }
 
   stages{
@@ -33,7 +33,7 @@ pipeline {
 
       stage('Run Ansible playbook') {
         steps {
-   ansiblePlaybook become: true, colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'Ansible2', inventory: 'inventory/${inventory}', playbook: 'playbooks/site.yaml'
+   ansiblePlaybook become: true, colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'Ansible2', inventory: 'inventory/${inventory}.yaml', playbook: 'playbooks/site.yaml'
          }
       }
 
