--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -6,9 +6,9 @@ pipeline {
     }
 
   parameters: 
-  {[
-    choice(choices: ['dev ', 'sit', 'uat'], description: 'This is the inventory file for the environment to deploy configuration', name: 'inventory')
-    ]
+  {
+    choice(choices: {'dev ', 'sit', 'uat'}, description: 'This is the inventory file for the environment to deploy configuration', name: 'inventory')
+    
   }
   stages{
       stage("Initial cleanup") {
