--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -7,8 +7,8 @@ pipeline {
 
   parameters
   {
-    choice(choices: ['dev','sit','uat'], description: 'This is the inventory file for the environment to deploy configuration', name: 'inventory')
-    
+    // choice(choices: ['dev','sit','uat'], description: 'This is the inventory file for the environment to deploy configuration', name: 'inventory')
+     string(name: 'inventory', defaultValue: 'dev',  description: 'This is the inventory file for the environment to deploy configuration')
   }
   stages{
       stage("Initial cleanup") {
