updated artifactory details

--- a/playbooks/site.yaml
+++ b/playbooks/site.yaml
@@ -8,6 +8,10 @@
 - name: nginx assignment
   import_playbook: ../static-assignments/nginx.yaml
 
+- hosts: artifactory
+- name: artifactory assignment
+  import_playbook: ../static-assignments/artifactory.yaml 
+
 # - hosts: all
 # - name: Include dynamic variables 
 #   # tasks:
