--- a/playbooks/site.yaml
+++ b/playbooks/site.yaml
@@ -1,12 +1,12 @@
 --- 
-- hosts: db
-- name: database assignment
-  import_playbook: ../static-assignments/db.yaml
+# - hosts: db
+# - name: database assignment
+#   import_playbook: ../static-assignments/db.yaml
 
 
-- hosts: nginx
-- name: nginx assignment
-  import_playbook: ../static-assignments/nginx.yaml
+# - hosts: nginx
+# - name: nginx assignment
+#   import_playbook: ../static-assignments/nginx.yaml
 
 - hosts: artifactory
 - name: artifactory assignment
