--- a/roles/artifactory/tasks/main.yml
+++ b/roles/artifactory/tasks/main.yml
@@ -5,7 +5,7 @@
   apt:
     name: gnupg2
     state: present
-    update_cache: yes
+    update_cache: no
 
 - name: Download and add GPG Key
   become: yes
@@ -26,7 +26,7 @@
   apt:
     name: jfrog-artifactory-oss
     state: present
-    update_cache: yes
+    update_cache: no
 
 - name: Start and enable Artifactory service
   become: yes
