--- a/roles/artifactory/tasks/main.yml
+++ b/roles/artifactory/tasks/main.yml
@@ -21,6 +21,13 @@
     create: yes
     state: present
 
+- name: Update Package
+  become: yes 
+  apt: 
+    update_cache: yes
+    force_apt_get: yes
+    cache_valid_time: 3600
+
 - name: Install JFrog
   become: yes
   apt:
