--- a/inventory/dev.yaml
+++ b/inventory/dev.yaml
@@ -5,3 +5,8 @@
 [db]
 172.31.20.50  ansible_ssh_user='ubuntu'
 
+[tooling]
+172.31.28.45  ansible_ssh_user='ec2-user'
+
+[todo]
+172.31.18.233  ansible_ssh_user='ubuntu'
