--- a/inventory/uat.yaml
+++ b/inventory/uat.yaml
@@ -1,3 +1,3 @@
-[lb]
-172.31.30.24 ansible_ssh_user='ec2-user'
-172.31.22.37 ansible_ssh_user='ec2-user'
+# [lb]
+# 172.31.30.24 ansible_ssh_user='ec2-user'
+# 172.31.22.37 ansible_ssh_user='ec2-user'
