--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -5,23 +5,23 @@ pipeline {
       ANSIBLE_CONFIG="${WORKSPACE}/deploy/ansible.cfg"
     }
 
-  parameters
-  {
+ // parameters
+ // {
     // choice(choices: ['dev','sit','uat'], description: 'This is the inventory file for the environment to deploy configuration', name: 'inventory')
-     string(name: 'inventory', defaultValue: 'dev',  description: 'This is the inventory file for the environment to deploy configuration')
-  }
-  stages{
-      stage("Initial cleanup") {
-          steps {
-            dir("${WORKSPACE}") {
-              deleteDir()
-            }
-          }
-        }
+  //   string(name: 'inventory', defaultValue: 'dev',  description: 'This is the inventory file for the environment to deploy configuration')
+ // }
+  //stages{
+      //stage("Initial cleanup") {
+          //steps {
+            //dir("${WORKSPACE}") {
+              //deleteDir()
+           // }
+          //}
+        //}
 
       stage('Checkout SCM') {
          steps{
-            git branch: 'dev', url: 'https://github.com/Ellawangari/ansible-config-mgt.git'
+            git branch: 'boma-branch', url: 'https://github.com/nbomasi/ansible-config-mgt.git'
          }
        }
 
@@ -34,7 +34,7 @@ pipeline {
 
       stage('Run Ansible playbook') {
         steps {
-              ansiblePlaybook become: true, colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'Ansible2', inventory: 'inventory/${inventory}.yaml', playbook: 'playbooks/site.yaml'
+              ansiblePlaybook colorized: true, credentialsId: 'mysql-server-key', disableHostKeyChecking: true, installation: 'myansible', inventory: 'inventory/dev.yaml', playbook: 'playbooks/site.yaml'
          }
         }
 
@@ -45,5 +45,5 @@ pipeline {
         }
    }
 
-}
+
 
