--- a/playbooks/site.yaml
+++ b/playbooks/site.yaml
@@ -3,10 +3,9 @@
  - name: database assignment
    import_playbook: ../static-assignments/db.yaml
 
-
-# - hosts: nginx
-# - name: nginx assignment
-#   import_playbook: ../static-assignments/nginx.yaml
+ - hosts: nginx
+ - name: nginx assignment
+   import_playbook: ../static-assignments/nginx.yaml
 
 #- hosts: artifactory
 #- name: artifactory assignment
